# mc-banner-generator

./: Cargo.toml  Dockerfile
.github/workflows/: push.yml
src/api/: router.rs
src/api/v1/: generate.rs
