[package]
name = "banner-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
log = "0.4.22"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
humantime = "2.1.0"
anyhow = "1.0.92"
tracing-subscriber = "0.3.18"
thiserror = "2.0.18"
enum-ordinalize = "4.3.0"
image = "0.25.4"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
enum-map = "2.7.3"
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "1.0.214", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
serde_json = "1.0.132"
mime_guess = "2.0.5"
